# haskell-musings

./: .gitignore  ChangeLog.md  LICENSE  README.md  cabal.project  hie.yaml  package.yaml  stack.yaml
.devcontainer/: Dockerfile  devcontainer.json
Achieve/: Achieve.cabal
Achieve/app/: Main.hs
Achieve/src/: Achieve.hs  Example.hs
Achieve/src/Achieve/: Describe.hs
AlgebraDrivenDesign/: algebra-driven-design.cabal  hie.yaml  package.yaml  stack.yaml
AlgebraDrivenDesign/src/ADD/: Scavenger.hs
AlgebraDrivenDesign/src/ADD/Games/: Ex01.hs  FirstModel.hs  Intro.hs
AlgebraDrivenDesign/src/ADD/Games/FirstModel/: Events.hs  Game.hs  Result.hs  Reward.hs
AlgebraDrivenDesign/src/ADD/Scavenger/: Clue.hs  Input.hs  InputFilter.hs  Types.hs
AlgebraDrivenDesign/src/ADD/Scavenger/Algebra/: Challenge.hs  ClueState.hs  InputFilter.hs  Types.hs
AlgebraDrivenDesign/src/ADD/Scavenger/Algebra2/: Challenge.hs  ClueState.hs  InputFilter.hs
AlgebraDrivenDesign/src/ADD_Old/Games/: FirstModel.hs  Intro.hs
AlgebraDrivenDesign/src/ADD_Old/Games/FirstModel/: Events.hs  Game.hs  Result.hs  Reward.hs
AlgebraDrivenDesign/test/ADD/Games/: FirstModelSpec.hs
AlgebraDrivenDesign/test/ADD/Scavenger/Algebra/: ChallengeSpec.hs  InputFilterSpec.hs
AlgebraDrivenDesign/test/ADD/Scavenger/Algebra2/: ChallengeSpec.hs  InputFilterSpec.hs
AlgebraDrivenDesign/test/ADD_Old/Games/: FirstModelSpec.hs
Bidirectional/: Bidirectional.cabal
Bidirectional/src/: Bidirectional.hs  BidirectionalWithImplicitCtx.hs  BidirectionalWithPolyLam.hs  Examples.hs
Bidirectional/src/Bidirectional/: Context.hs  ContextState.hs  FreshVar.hs  Language.hs  ReportTypeErrors.hs  Subtyping.hs
EarlyDays/: early-days.cabal  package.yaml  stack.yaml
EarlyDays/src/: BinaryTree.hs
EarlyDays/src/TypeLevel/: List.hs  Set.hs
Existential/: Existential.cabal
Existential/src/Existential/: Fresh.hs  ReportTypeErrors.hs
Existential/src/Existential/Surface/: Language.hs  Typechecking.hs  Unification.hs
Freedoms/: .gitignore  Freedoms.cabal  bench.out  bench.sh  cabal.project
Freedoms/app/: Main.hs
Freedoms/app/Bench/: Counter.hs
Freedoms/bench_results/: inlines.out  no_inlines.out  no_inlines_aggressive.out
Freedoms/src/Freedoms/Free/: Church.hs  Data.hs  FinalClassy.hs  FinalReader.hs
Freedoms/src/Freedoms/Free/Examples/: Terminal.hs
Freedoms/src/Freedoms/Freer/: Church.hs  Common.hs  Data.hs  FinalClassy.hs  FinalReader.hs
Freedoms/src/Freedoms/Freer/Examples/: Terminal.hs
Freedoms/src/Freedoms/FreerExtensible/: FinalReader.hs
Henk/: Henk.cabal
Henk/src/: Henk.hs
Henk/src/Henk/: Example.hs  PTS.hs  PTSAnnotatedVars.hs  Sugar.hs
Henk/src/Henk/PTS/: Core.hs  Fw.hs  SimplyTyped.hs
HsFennel/: hs-fennel.cabal
HsFennel/app/: Fennel.hs  Main.hs
HsFennel/resources/: fennel.lua
LambdaPi/: LambdaPi.cabal
LambdaPi/src/LambdaPi/Dependent/: ByTheBook.hs
LambdaPi/src/LambdaPi/Dependent/MyExtensions/: Core.hs  Examples.hs  Includes.hs  Nat.hs  Vec.hs
LambdaPi/src/LambdaPi/SimplyTyped/: ByTheBook.hs  Mine.hs
Objects/: .ghci  .gitignore  objects.cabal
Objects/src/: Examples.hs  Objects.hs
RealWorldHaskell/: haskell-musings.cabal  package.yaml  real-world-haskell.cabal  stack.yaml
RealWorldHaskell/src/: FiniteAutomata.hs
RealWorldHaskell/src/RealWorldHaskell/Ch05/: Prettify.hs
RealWorldHaskell/src/RealWorldHaskell/Ch08/: Glob.hs
RealWorldHaskell/src/RealWorldHaskell/Ch09/: FoldDir.hs
RealWorldHaskell/src/RealWorldHaskell/Ch10/: PNM.hs  Parse.hs
RealWorldHaskell/src/RealWorldHaskell/Ch15/: MonadHandle.hs  MovieReview.hs  SupplyConst.hs  WriterIO.hs
RealWorldHaskell/src/RealWorldHaskell/Ch16/: JSONParse.hs
SmallThings/: hie.yaml  package.yaml  small-things.cabal  stack.yaml
SmallThings/src/: Cont.hs  FirstClassModules.hs  Hanoi.hs  Metaphor.lhs  Metaphor.md  NFold.hs  NFoldUsage.hs  Structural.hs
SmallThings/src/Free/: Church.hs  Data.hs  Example.hs  FinalClassy.hs  FinalReader.hs
SmallThings/src/Freer/: Church.hs  Common.hs  Data.hs  Example.hs  FinalClassy.hs  FinalReader.hs
SmallThings/src/Structural/: Copointed.hs  Description.hs  Structure.hs  Utils.hs
SmallThings/src/Structural/Structure/: Generic.hs  Records.hs
src/: BinaryTree.hs  FiniteAutomata.hs  HTree.hs  Lens.hs  TypeLevelSets.hs  sorter.hs
src/RealWorldHaskell/: ch03.hs  ch04.hs
src/RealWorldHaskell/Ch05/: PrettyJSON.hs  PutJSON.hs  SimpleJSON.hs
src/RealWorldHaskell/Ch08/: GlobFile.hs
src/RealWorldHaskell/Ch09/: ControlledTraversal.hs  RecursiveContents.hs
src/RealWorldHaskell/Ch10/: Parse.hs
src/RealWorldHaskell/Ch12/: Barcode.hs
src/RealWorldHaskell/Ch15/: SafeHello.hs  Supply.hs  SupplyClass.hs
src/RealWorldHaskell/Ch16/: CSV.hs  FormParse.hs
src/RealWorldHaskell/ch01/: WC.hs
src/TypeLevel/: List.hs  Reflection.hs  Set.hs
