cabal-version: 3.0
name: Bidirectional
version: 0.1.0.0
license: NONE
author: Gustavo Bicalho
maintainer: gusbicalho@gmail.com
synopsis:
  Implementation based on https://www.cl.cam.ac.uk/~nk480/bidir.pdf

library
  hs-source-dirs: src
  default-language: GHC2021
  ghc-options:
    -Wall -Wcompat
  exposed-modules:
    Bidirectional
  build-depends:
    base ^>=4.16.1.0,
    containers,
    transformers
