cabal-version: 3.0
name: Henk
version: 0.1.0.0
license: NONE
author: Gustavo Bicalho
description:
  Attempt to implement the language from https://www.microsoft.com/en-us/research/wp-content/uploads/1997/01/henk.pdf
library
  exposed-modules:
    Henk
    Henk.Sugar
    Henk.PTS.Core
    Henk.PTS.Fw
    Henk.PTS.SimplyTyped
  build-depends:
    base ^>=4.16.1.0
  ghc-options:
    -Wall -Wcompat
  hs-source-dirs: src
  default-language: GHC2021
