cabal-version:      2.2
name:               LambdaPi
version:            0.1.0.0
license:            NONE
author:             Gustavo Bicalho
maintainer:         gusbicalho@gmail.com
description:        Code based on https://www.andres-loeh.de/LambdaPi/
library
  default-language: GHC2021
  hs-source-dirs: src
  exposed-modules:
    LambdaPi.Dependent.ByTheBook
    LambdaPi.Dependent.MyExtensions.Core
    LambdaPi.Dependent.MyExtensions.Examples
    LambdaPi.Dependent.MyExtensions.Includes
    LambdaPi.Dependent.MyExtensions.Nat
    LambdaPi.Dependent.MyExtensions.Vec
    LambdaPi.SimplyTyped.ByTheBook
    LambdaPi.SimplyTyped.Mine
  build-depends:
    base ^>=4.16.1.0
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wredundant-constraints -Wno-name-shadowing
    -foptimal-applicative-do
