cabal-version:       2.4
name:                objects
version:             0.0.0.0
synopsis:            Objects
description:         Objects
license:             MIT
license-file:        LICENSE
author:              Gustavo Bicalho
maintainer:          Gustavo Bicalho <gusbicalho@gmail.com>
copyright:           2020 Gustavo Bicalho
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.10.2

source-repository head
  type:                git
  location:            https://github.com/gusbicalho/haskell-musings.git

common common-options
  build-depends:       base >= 4.14.0.0
                     , containers

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
                       -Wunused-packages

  default-language:    Haskell2010

common optimize-a-lot
  ghc-options:         -foptimal-applicative-do
                       -fexpose-all-unfoldings
                       -fspecialise-aggressively
                       -fcross-module-specialise
                       -flate-specialise

common optimized-executable
  import:              optimize-a-lot
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

library
  import:              common-options
  import:              optimize-a-lot
  hs-source-dirs:      src
  build-depends:       base >= 4.14.0.0
  exposed-modules:     Objects
